block master ret

--- a/src/pages/faq.pug
+++ b/src/pages/faq.pug
@@ -109,7 +109,7 @@ block content
                                 |В противном случае мастер имеет право взять с Вас 100% предоплату при записи на следующий сеанс или отказать Вам без объяснения причин.
                                 p #[br] Давайте уважать личное время друг друга - ведь это так просто!
         h2 Остались вопросы ?
-        div#vue-rev
+        div#vue-que
 
 
 
