--- a/src/pages/include/layout.pug
+++ b/src/pages/include/layout.pug
@@ -29,11 +29,11 @@ html(lang="en")
                                         a.nav-link.menu-link(href='faq.html') FAQ
 
         block content
-        div.container
-        div.row
+        //div.container
+        //div.row
             div.col-12
                 div.footer-decoration
-                    footer.footer.inner
+                    footer.footer
 
 
 
