--- a/src/pages/osipova.pug
+++ b/src/pages/osipova.pug
@@ -10,62 +10,92 @@ block content
     section.master-section
         div.inner
             div.wrap-master-section
-                div.wrap-master-section__container
-                    div.master-box
-                        div.master-box__text-description
-                            div
-                                p.master-box__name Ксения
-                                p.master-box__sector Цветная татуировка
-                                p.master-box__desc Уважаю Ваш выбор тату и всегда готова подсказать лучшие варианты реализации. Предпочитаю работы в стилях акварель и графика. Хочу, чтобы по улицам нашего города ходили как можно больше людей с качественными и уникальными изображениями на теле! Без проблем сделаю перекрытие старой тату или замаскирую шрам!
-                            div
+                div.card.card-desktop.mx-auto.d-none.d-md-block
+                    div.row
+                        div.col-md-7.col-sm-4
+                            div.card-body
+                                p.card-title.master-card-name Ксения
+                                p.card-text.master-card-sector Цветная татуировка
+                                p.card-text.master-card-desc Уважаю Ваш выбор тату и всегда готова подсказать лучшие варианты реализации. Предпочитаю работы в стилях акварель и графика. Хочу, чтобы по улицам нашего города ходили как можно больше людей с качественными и уникальными изображениями на теле! Без проблем сделаю перекрытие старой тату или замаскирую шрам!
                                 a(href="https://www.instagram.com/_oktattoo_/" target='_blank')
-                                    img.master-box__inst(src=require("../images/masters/instagram.svg"))
-                        img.master__photo.master__photo--size(src=require("../images/index/osipova.jpg"))
-    section.inner
-        h2 последние работы
-        //section.last-worck
-            div.prev.n
-                a(href='#')
-                    img.slider__but(src=require("../images/index/nextb.svg"))
-            div.slider
-                img.img.curry(src=require("../images/masters/960x960 (1).jpg"))
-                img.img(src=require("../images/index/last/b.jpg"))
-                img.img(src=require("../images/index/last/b.jpg"))
-                img.img(src=require("../images/index/last/c.jpg"))
-                img.img(src=require("../images/index/last/d.jpg"))
-                img.img(src=require("../images/index/last/e.jpg"))
-                img.img(src=require("../images/index/last/f.jpg"))
-                img.img(src=require("../images/index/last/g.jpg"))
-                img.img(src=require("../images/index/last/h.jpg"))
-            div.next.n
-                a(href='#')
-                    img.slider__but(src=require("../images/index/nextn.svg"))
-        h2 отзывы
-        section.reviews
-            div.ower
-                div.rew
-                    p.comment Lorem ipsum dolor nim error sossimus quam totam!
-                    div.author-comment
-                        span.author-comment__name Игорь
-                        span.author-comment__mail verslibre.md@gmail.com
-                        span.author-comment__data 17:40 05.04.2021
-                div.rew
-                    p.comment Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias aliquid atque consequuntur dolor dolorem, doloribus earum enim error excepturi in iusto magnam modi molestiae mollitia necessitatibus nisi quae quo, sed, soluta totam voluptas voluptate. Architecto eligendi expedita impedit ipsa vel. Dignissimos dolore saepe soluta! Alias non possimus quam totam!
-                    div.author-comment
-                        span.author-comment__name Дима
-                        span.author-comment__mail verslibre.md@gmail.com
-                        span.author-comment__data 17:40 05.04.2021
+                                    img.master-card-inst(src=require("../images/masters/instagram.svg"))
+                        div.col-md-5.p-4.col-sm-6
+                            img.master__photo.master__photo--size(src=require("../images/index/osipova.jpg"))
+                div.card.card-mobile.d-block.d-md-none.mx-auto
+                    img.master__photo.master__photo--size.card-img-top(src=require("../images/index/osipova.jpg"))
+                    div.card-body
+                        p.card-title.master-card-name Ксения
+                        p.card-text.master-card-sector Цветная татуировка
+                        p.card-text.master-card-desc Уважаю Ваш выбор тату и всегда готова подсказать лучшие варианты реализации. Предпочитаю работы в стилях акварель и графика. Хочу, чтобы по улицам нашего города ходили как можно больше людей с качественными и уникальными изображениями на теле! Без проблем сделаю перекрытие старой тату или замаскирую шрам!
+                        a(href="https://www.instagram.com/_oktattoo_/" target='_blank')
+                            img.master-card-inst(src=require("../images/masters/instagram.svg"))
+            h2 последние работы
+            div.master-last-work
+                div.container
+                    div.row
+                        div.col-10.mx-auto
+                            div#slider.carousel.carousel-dark.slide(data-ride="carousel")
+                                ol.carousel-indicators
+                                    li.active(data-target="#slider" data-slide-to="0")
+                                    li(data-target="#slider" data-slide-to="1")
+                                    li(data-target="#slider" data-slide-to="2")
+                                    li(data-target="#slider" data-slide-to="3")
+                                    li(data-target="#slider" data-slide-to="4")
+                                    li(data-target="#slider" data-slide-to="5")
+                                    li(data-target="#slider" data-slide-to="6")
+                                    li(data-target="#slider" data-slide-to="7")
+                                    li(data-target="#slider" data-slide-to="8")
+                                div.carousel-inner
+                                    div.carousel-item.active
+                                        img.img-slider.d-block.mx-auto(src=require("../images/lastwork/a.jpg"))
+                                    div.carousel-item
+                                        img.img-slider.d-block.mx-auto(src=require("../images/lastwork/d.jpg"))
+                                    div.carousel-item
+                                        img.img-slider.d-block.mx-auto(src=require("../images/lastwork/g.jpg"))
+                                a.carousel-control-prev(href='#slider' role="button" data-slide="prev")
+                                    span.carousel-control-prev-icon(aria-hidden="true")
+                                    span.sr-only Previous
+                                a.carousel-control-next(href='#slider' role="button" data-slide="next")
+                                    span.carousel-control-next-icon(aria-hidden="true")
+                                    span.sr-only Next
+            h2 отзывы
+            section.reviews
+                div.container
+                    div.row
+                        div.col-12
+                            div.card.w-75.mx-auto.mt-2.mb-2
+                                div.card-body
+                                    p.card-text.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi cumque dolorem earum est incidunt magni minima mollitia nemo quas tenetur.
+                                    p.card-text.reviews__author Дмитрий
+                                    p.card-text.reviews__author verslibre.fm@gmail.com
+                                    p.card-text.reviews__author 23:14 07/02/2021
+                            div.card.w-75.mx-auto.mt-2.mb-2
+                                div.card-body
+                                    p.card-text.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi cumque dolorem earum est incidunt magni minima mollitia nemo quas tenetur.
+                                    p.card-text.reviews__author Дмитрий
+                                    p.card-text.reviews__author verslibre.fm@gmail.com
+                                    p.card-text.reviews__author 23:14 07/02/2021
+                            div.card.w-75.mx-auto.mt-2.mb-2
+                                div.card-body
+                                    p.card-text.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum debitis, delectus error eveniet excepturi iusto natus nemo nostrum numquam optio provident saepe sapiente ut velit voluptatem! Iusto quibusdam quidem rem repellendus voluptate. Ad, animi consequuntur corporis cumque cupiditate dicta dolorem doloremque ea eligendi fugit id incidunt iusto laborum laudantium libero maxime, minus modi nam neque, non numquam quasi quibusdam quo repellat sapiente sequi similique tempora tempore temporibus totam! Debitis libero magni suscipit. Atque beatae esse itaque iure labore minus odio placeat praesentium, quibusdam quidem saepe similique tempora. Adipisci, magnam placeat!
+                                    p.card-text.reviews__author Дмитрий
+                                    p.card-text.reviews__author verslibre.fm@gmail.com
+                                    p.card-text.reviews__author 23:14 07/02/2021
+                            div.card.w-75.mx-auto.mt-2.mb-2
+                                div.card-body
+                                    p.card-text.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi cumque dolorem earum est incidunt magni minima mollitia nemo quas tenetur.
+                                    p.card-text.reviews__author Дмитрий
+                                    p.card-text.reviews__author verslibre.fm@gmail.com
+                                    p.card-text.reviews__author 23:14 07/02/2021
+                            div.card.w-75.mx-auto.mt-2.mb-2
+                                div.card-body
+                                    p.card-text.reviews__text Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi cumque dolorem earum est incidunt magni minima mollitia nemo quas tenetur.
+                                    p.card-text.reviews__author Дмитрий
+                                    p.card-text.reviews__author verslibre.fm@gmail.com
+                                    p.card-text.reviews__author 23:14 07/02/2021
 
-                div.rew
-                    p.comment Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias aliquid atque consequuntur dolor dolorem, doloribus earum enim error excepturi in iusto magnam modi molestiae mollitia necessitatibus nisi quae quo, sed, soluta totam voluptas voluptate. Architecto eligendi expedita impedit ipsa vel. Dignissimos dolore saepe soluta! Alias non possimus quam totam!
-                    div.author-comment
-                        span.author-comment__name Дима
-                        span.author-comment__mail verslibre.md@gmail.com
-                        span.author-comment__data 17:40 05.04.2021
-            div.coments-form
-                h3.title-for-form Оставить отзыв
-                    form.form
-                        input.input.input--size(type='text', placeholder='имя')
-                        input.input.input--size(type='text', placeholder='адрес эл.почты')
-                        textarea.input(cols=40, rows=10, placeholder='Ваш отзыв')
-                        input.input.input-sub(type='submit', value='отправить')
+
+            h2 Оставить отзыв
+            section.form-review
+                div#vue-rew
+
