--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -185,7 +185,12 @@
   height: 500px;
   object-fit: cover;
   @include mediaWidth($widthPhone) {
+    width: 400px;
     height: 400px;
+  }
+  @include mediaWidth($widthXs) {
+    width: 300px;
+    height: 300px;
   }
 }
 .carousel-dark .carousel-control-next-icon, .carousel-dark .carousel-control-prev-icon {
