--- a/src/styles/scss/layout.scss
+++ b/src/styles/scss/layout.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap');
 @font-face {
   font-family: 'FinistC';
   src: url("/src/fonts/FinistC.otf") format("opentype");
@@ -63,6 +64,9 @@ p{
     max-width: 500px;
   }
 
+}
+.carousel-indicators li.active{
+  background-color:  #6D99E9;
 }
 
 /*---------------------------*/
