--- a/src/styles/scss/masters.scss
+++ b/src/styles/scss/masters.scss
@@ -4,7 +4,7 @@
   height: 500px;
   background: linear-gradient(90deg, #DAE2F8 0%, #D6A4A4 100%);
   @include mediaWidth($widthPhone) {
-    height: auto;
+    height: 667px;
   }
   @include mediaWidth($widthXs) {
     background: none;
@@ -57,6 +57,12 @@
     height: 255px;
     margin-left: 45px;
   }
+}
+.master__photo--height{
+  height: 100%;
+}
+.master-card-inst--margin-top{
+  margin-top: 50px;
 }
 .wrap-master-section .card.card-desktop{
   width: 750px;
