--- a/src/styles/scss/masters.scss
+++ b/src/styles/scss/masters.scss
@@ -4,7 +4,7 @@
   height: 500px;
   background: linear-gradient(90deg, #DAE2F8 0%, #D6A4A4 100%);
   @include mediaWidth($widthPhone) {
-    height: 667px;
+    background: none;
   }
   @include mediaWidth($widthXs) {
     background: none;
@@ -48,6 +48,9 @@
   width: 40px;
   height: 40px;
 }
+.master-card-inst--margin-top{
+  margin-top: 50px;
+}
 .master__photo--size{
   border-radius: 0;
   width: 255px;
@@ -61,14 +64,14 @@
 .master__photo--height{
   height: 100%;
 }
-.master-card-inst--margin-top{
-  margin-top: 50px;
-}
 .wrap-master-section .card.card-desktop{
   width: 750px;
 }
 .wrap-master-section .card.card-mobile{
   width: 18rem;
+  @include mediaWidth($widthPhone) {
+    box-shadow: 0px 46px 268px rgba(69, 141, 184, 0.46), 0px 13.8677px 80.7942px rgba(69, 141, 184, 0.299731), 0px 5.75991px 33.5578px rgba(69, 141, 184, 0.23), 0px 2.08325px 12.1372px rgba(69, 141, 184, 0.160269);
+  }
 }
 
 //reviews
